# smartmet-qdtools

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  smartmet-qdtools.spec
.circleci/: config.yml  manual.yml
cnf/: bufr.conf  en.conf  grib.conf  netcdf.conf  parameters.csv
docs/: Meteorologin editorin SmartTool ohjeet.doc  ashtoqd.md  bufrtoqd.md  cleaner.md  combineHistory.md  combinepgms2qd.md  compositealpha.md  csv2qd.md  executing-script.md  flash2qd.md  grib2tojpg.md  grib2toqd.md  gribtoqd.md  h5toqd.md  kriging2qd.md  laps2qd.md  metar2qd.md  nc2qd.md  nctoqd.md  pgm2qd.md  projection-descriptions-in-SmartMet.md  qd2csv.md  qdarea-tutorial.md  qdarea.md  qdcheck.md  qdcombine.md  qdcontour.md  qdcrop.md  qddiff.md  qddifference.md  qdextract.md  qdfilter.md  qdgridcalc.md  qdinfo-tutorial.md  qdinfo.md  qdinterpolatearea.md  qdinterpolatetime.md  qdmissing.md  qdpoint-tutorial.md  qdpoint.md  (+22 more)
include/: DataTransform.h  FmiNetCdfQueryData.h  GeoTiffQD.h  GribTools.h  Hdf5File.h  HdfTools.h  MoonPhase.h  NFmiDataModifierDataChecking.h  NFmiParamCheckData.h  NFmiQueryDataChecker.h  NcFileExtended.h  NcVarTools.h  Pgm2QueryData.h  Projection.h  ProjectionParser.h  ProjectionStore.h  QueryDataManager.h  TimeTools.h  nctools.h  wgrib_functions.h
main/: ashtoqd.cpp  bufrtoqd.cpp  combineHistory.cpp  combinepgms2qd.cpp  csv2qd.cpp  flash2qd.cpp  grib2tojpg.cpp  grib2toqd.cpp  gribtoqd.cpp  h5toqd.cpp  (+39 more)
main-cmake-lists/qdclimatologydatasmoother/: CMakeLists.txt
main-cmake-lists/qdversionchange/: CMakeLists.txt
(+142 files in other folders)
